--- a/src/components/VideoSlider/VideoSlider.scss
+++ b/src/components/VideoSlider/VideoSlider.scss
@@ -704,6 +704,7 @@
       z-index: 10;
       
       .pagination-dot {
+        display: none;
         width: 10px;
         height: 10px;
         border-radius: 50%;
