--- a/src/components/WorkedWith/WorkedWith.scss
+++ b/src/components/WorkedWith/WorkedWith.scss
@@ -114,6 +114,7 @@ img {
   top: 0%;
   width: 100%;
   font-family: "PP Neue Montreal", sans-serif;
+  font-family: "Cambo";
   font-weight: 500;
   text-transform: uppercase;
   line-height: 100%;
@@ -126,7 +127,8 @@ img {
 }
 
 .menu-item .name p {
-  font-family: "Bodoni Moda", serif;
+  // font-family: "Bodoni Moda", serif;
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
 .info,
